# fastapi-next-todo

./: docker-compose.yml  readme.md
backend/: Dockerfile  config.py  deps.py  main.py  pyproject.toml  schemas.py
backend/api/: main.py
backend/api/routers/: todos.py
backend/db/: crud.py  engine.py  models.py
backend/scripts/: format.sh  run.sh
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
frontend/src/: api.ts  types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: EditTodo.tsx  TodoItem.tsx  TodoList.tsx  Todos.tsx
frontend/src/components/ui/: sheet.tsx  sonner.tsx
